# rust-canvas-test

./: canvas-test.code-workspace  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
engine/: Cargo.toml  LICENSE  README.md
engine/src/: action.rs  engine.rs  fixedPoint.rs  fixed_point.rs  input.rs  lib.rs  main.rs  renderer.rs  utils.rs
engine/src/components/: graphics.rs  mod.rs  physics.rs  serialization.rs
engine/src/components/graphics/: color.rs  draw_circle.rs
engine/src/components/physics/: gravity.rs  gravity_emitter.rs  movement_receiver.rs  position.rs  velocity.rs
engine/src/core/: mod.rs
engine/src/core/networking/: channels.rs  mod.rs  set_client_connection.rs  set_host_connection.rs  types.rs
engine/src/core/scheduling/: input.rs  mod.rs  tick_queue.rs  types.rs
engine/src/resources/: mod.rs  res_tick_coordinator.rs
engine/src/resources/tick_coordination/: action_coordinator.rs  connection_loopback.rs  connection_to_client.rs  connection_to_host.rs  hosting_session.rs  mod.rs  networking.rs  notes.md  peer_connection.rs  res_tick_coordinator.rs  tick_queue.rs  types.rs
engine/src/shaders/: circle_test.frag  circle_test.vert
engine/src/systems/: mod.rs  set_client_connection.rs  sysGravity.rs  sysMovement.rs  sysRenderer.rs  sys_client_init.rs  sys_fire_receive.rs  sys_gravity.rs  sys_input.rs  sys_movement.rs  sys_movement_receive.rs  sys_renderer.rs  sys_tick_coordination.rs
engine/src/test/: mod.rs  sync_test.rs
notes/: graphics.md  networking.txt
src/: App.vue  main.ts
src/components/pages/: CanvasTest.vue  HostSession.vue  JoinSession.vue
src/style/: styles.scss
src/usables/: useListener.ts  useRtcHelper.ts
